# amazon-spapi-workers

./: .env.example  .gitignore  MANIFEST.in  README.md  config.ini.sample  pyproject.toml  requirements-private.txt  requirements.txt
amazon_spapi/: __init__.py  log.py
amazon_spapi/amazon/: __init__.py
amazon_spapi/commands/: check_server.py  test_spapi_auth.py
amazon_spapi/config/: env.py  paths.py  workers.py
amazon_spapi/jobs/: __init__.py  fetch_products.py  refresh_catalog.py  refresh_offers.py
amazon_spapi/platform/: __init__.py  config_loader.py  telegram.py
amazon_spapi/scheduling/: __init__.py  asin_file.py  backpressure.py  dedup.py  kombu_priority_patch.py  priority.py  send.py
amazon_spapi/services/: elasticsearch.py  es_doc_timestamps.py  es_time_field.py  offer_service.py  product_service.py
amazon_spapi/spapi/: __init__.py  asin.py  catalog.py  catalog_items.py  client.py  exceptions.py  marketplaces.py  monkey_patches.py  offer_converter.py  offers.py  spapi_catalog_items_parser.py  wrapper.py
amazon_spapi/worker/: __init__.py  app.py  queue_names.py  settings.py  worker_deps.py  worker_meta.py
deploy/: check-server.sh  deploy.env.example  install-logrotate.sh  install-systemd.sh  install-ubuntu.sh
deploy/conf.d/: celery_spapi.example
deploy/journald/: size-limit.conf
deploy/logrotate/: amazon-spapi.conf.template
deploy/systemd/: README.md  amazon-spapi-catalog-us.service  amazon-spapi-catalog.service  amazon-spapi-offers-us.service  amazon-spapi.env.example  (+1 more)
docs/: DEPLOY.md  systemd执行路径.md  业务说明.md  公开仓库.md  生产部署.md  监控数据.md
(+26 files in other folders)
