[project]
name = "amazon-spapi-workers"
version = "0.4.0"
description = "Amazon SP-API background workers: offers refresh, catalog sync, product download"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "celery[redis]",
    "elasticsearch<7.0.0",
    "pint",
    "python-amazon-sp-api>=1.4.3",
    "python-telegram-bot==12.8.0",
    "requests",
    "sentry-sdk",
    "setuptools",
    "urllib3<2",
    "wrapt",
]

[project.scripts]
schedule-stale-offers = "amazon_spapi.commands.amazon.schedule_stale_offers:main"
amazon-spapi-check = "amazon_spapi.commands.check_server:main"
amazon-spapi-test-auth = "amazon_spapi.commands.test_spapi_auth:main"

[tool.uv.workspace]
members = [
    ".",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["amazon_spapi*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
docstring-code-format = true
